[package]
name = "iron-send-file"
version = "0.1.1"
authors = ["Luka Zakrajšek <luka@bancek.net>"]
repository = "https://github.com/bancek/iron-send-file.git"
documentation = "https://docs.rs/iron-send-file/0.1.1/iron_send_file/"
description = "Serve files with Range header support for Iron library."
readme = "README.md"
license = "MIT"

[dependencies]
iron = "0.6.0"
hyper = "0.11.9"
conduit-mime-types = "0.7.3"
lazy_static = "1.0.0"
http-range = "0.1.1"
